--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Youtube</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 <body>
     <nav id="navigation">
+        <i class="fas fa-bars" id="guide"></i>
         <img src="images/logo.png" alt="logo" id="logo">
         <input type="search" name="q" id="search">
-        <button type="submit" id="searchButton"></button>
+        <button type="submit" id="searchButton">
+            <img id="image" src="images/glass.png">
+        </button>
         <img src="images/icons.png" alt="icons" id="icons">
     </nav>
 </body>
