--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Youtube</title>
-    <link rel="stylesheet" href="Styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 <body>
     <nav id="navigation">
         <div id="guideContainer">
             <i class="fas fa-bars guideLogo" id="guide"></i>
-            <img src="Images/logo.png" alt="logo" id="logo" class="guideLogo">
+            <img src="images/logo.png" alt="logo" id="logo" class="guideLogo">
         </div> 
         <form id="searchContainer">
             <input type="text" name="q" id="search">
@@ -20,7 +20,16 @@
                 <i class="fa fa-search" id="imageSearchButton"></i>
             </button>
         </form>
-        <img src="Images/icons.png" alt="icons" id="icons">
+        <img src="images/icons.png" alt="icons" id="icons">
     </nav>
+        <div id="mainContent">
+        <main id="main">
+            <iframe id="mainVideo" width="560" height="315" src="https://www.youtube.com/embed/tw2hcKNoz40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h1 id="videoTitle">Rose Lavelle | Best Moments | USWNT</h1>
+        </main>
+        <sidebar>
+
+        </sidebar>
+    </div>
 </body>
 </html>
