--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 <body>
+    <!-- Navigation -------------->
     <nav id="navigation">
         <div id="guideContainer">
             <i class="fas fa-bars guideLogo" id="guide"></i>
@@ -22,13 +23,14 @@
         </form>
         <img src="images/icons.png" alt="icons" id="icons">
     </nav>
+    <!-- Main Content and sidebar -------------->
         <div id="mainContent">
         <main id="main">
-            <iframe id="mainVideo" width="560" height="315" src="https://www.youtube.com/embed/tw2hcKNoz40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="mainVideo" src="https://www.youtube.com/embed/tw2hcKNoz40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h1 id="videoTitle">Rose Lavelle | Best Moments | USWNT</h1>
         </main>
-        <sidebar>
-
+        <sidebar id="sidebar">
+            <p>asdfnædfngædsfgjæn</p>
         </sidebar>
     </div>
 </body>
