--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Youtube</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    
 </head>
 <body>
     <!-- Navigation -------------->
@@ -28,6 +29,16 @@
         <main id="main">
             <iframe id="mainVideo" src="https://www.youtube.com/embed/tw2hcKNoz40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h1 id="videoTitle">Rose Lavelle | Best Moments | USWNT</h1>
+            <div id="socials">
+                <p class="social">44.872 visualizações</p>
+                <i class="fa fa-thumbs-up social"> 512</i>
+                <i class="fa fa-thumbs-down social">2</i>
+                <img src="images/share.png" alt="icons" id="icon" class="social">
+                <p class="social">Share</p>
+                <img src="images/save.png" alt="icons" id="icon" class="social">
+                <p class="social">Save</p>
+                <img src="images/dots.svg" alt="icons" id="icon" class="social">
+            </div>
         </main>
         <sidebar id="sidebar">
             <p>asdfnædfngædsfgjæn</p>
