added some main content

--- a/index.html
+++ b/index.html
@@ -24,22 +24,34 @@
         </form>
         <img src="images/icons.png" alt="icons" id="icons">
     </nav>
-    <!-- Main Content and sidebar -------------->
+    <!-- Content and sidebar container -------------->
         <div id="mainContent">
+    <!-- Main Content -------------->
         <main id="main">
             <iframe id="mainVideo" src="https://www.youtube.com/embed/tw2hcKNoz40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h1 id="videoTitle">Rose Lavelle | Best Moments | USWNT</h1>
-            <div id="socials">
-                <p class="social">44.872 visualizações</p>
-                <i class="fa fa-thumbs-up social"> 512</i>
-                <i class="fa fa-thumbs-down social">2</i>
-                <img src="images/share.png" alt="icons" id="icon" class="social">
-                <p class="social">Share</p>
-                <img src="images/save.png" alt="icons" id="icon" class="social">
-                <p class="social">Save</p>
-                <img src="images/dots.svg" alt="icons" id="icon" class="social">
+            <div id="socialsContainer">
+                <p>44.872 visualizações</p>
+                <div id="socialsIcons">
+                    <i class="fa fa-thumbs-up socialIcon"> 512</i>
+                    <i class="fa fa-thumbs-down socialIcon">2</i>
+                    <img class ="socialIcon" src="images/share.png" alt="icons" id="icon">
+                    <p>Share</p>
+                    <img class ="socialIcon" src="images/save.png" alt="icons" id="icon">
+                    <p>Save</p>
+                    <img class ="socialIcon" src="images/dots.svg" alt="icons" id="icon">
+                </div>
+            </div>
+    <!-- spacer for seperation -------------->        
+            <div class="spacer"></div>
+    <!-- video description -------------->        
+            <img id="channelImage" src="images/channel.jpg" alt="channel">
+            <div id="channelNameContainer">
+                <h2>Viu Viu</h2>
+                <p>Published the 21. may 2019</p>
             </div>
         </main>
+    <!-- sidebar -------------->
         <sidebar id="sidebar">
             <p>asdfnædfngædsfgjæn</p>
         </sidebar>
