sizing video information elements

--- a/index.html
+++ b/index.html
@@ -44,12 +44,23 @@
             </div>
     <!-- spacer for seperation -------------->        
             <div class="spacer"></div>
-    <!-- video description -------------->        
-            <img id="channelImage" src="images/channel.jpg" alt="channel">
-            <div id="channelNameContainer">
-                <h2>Viu Viu</h2>
-                <p>Published the 21. may 2019</p>
+    <!-- video description -------------->
+            <div id="videoDescription">
+                <div id="channelDescription">
+                    <img id="channelImage" src="images/channel.jpg" alt="channel">
+                    <div id="channelNameContainer">
+                        <h2>Viu Viu</h2>
+                        <p>Published the 21. may 2019</p>
+                    </div>
+                </div>
+                <div>
+                    <button id="subscribeButton" type="submit">SUBSCRIBE 25 THOUSAND</button>
+                </div>
             </div>
+            <div id="category">
+                <p>Category</p>
+                <a href="#">Sports</a>
+            </div>        
         </main>
     <!-- sidebar -------------->
         <sidebar id="sidebar">
