started on comment section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,17 @@
             <div id="category">
                 <p>Category</p>
                 <a href="#">Sports</a>
-            </div>        
+            </div> 
+            <!-- spacer for seperation -------------->        
+            <div class="spacer"></div>  
+            <!--Comment section!-->   
+            <div id="commentsSort">
+                <p id="comments">133 Comments</p>
+                <div id="sortButton">
+                    <img id="sortIcon" src="images/sort.jpg" alt="sort">
+                <p>SORT BY</p>
+                </div>
+            </div>
         </main>
     <!-- sidebar -------------->
         <sidebar id="sidebar">
