adding comment's section from user

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                 <p>SORT BY</p>
                 </div>
             </div>
+            <div id="inputComment">
+                <img src="images/thumbnail.jpg" alt="thumbnail" id="userImage">
+                <input type="text" placeholder="Add a public comment..." id="inputField">
+            </div>
         </main>
     <!-- sidebar -------------->
         <sidebar id="sidebar">
