working on video thumbnails

--- a/index.html
+++ b/index.html
@@ -78,7 +78,21 @@
         </main>
     <!-- sidebar -------------->
         <sidebar id="sidebar">
-            <p>asdfnædfngædsfgjæn</p>
+            <div id="nextAndAP">
+                <p>Next</p>
+                <div id="autoplay">
+                    <p>AUTOPLAY</p>
+                    <img src="/images/autoplay.png" alt="autoplay">
+                </div>
+            </div>
+            <div class="videoThumbnail">
+                <img src="/images/videoThumbnail.png" alt="thumbnail">
+                <div class="videoText">
+                    <h3>The journey: Rose Lavelle</h3>
+                    <p>U.S Soccer</p>
+                    <p>314 k views</p>
+                </div>
+            </div>
         </sidebar>
     </div>
 </body>
