finishing the comments session

--- a/index.html
+++ b/index.html
@@ -75,6 +75,76 @@
                 <img src="images/thumbnail.jpg" alt="thumbnail" id="userImage">
                 <input type="text" placeholder="Add a public comment..." id="inputField">
             </div>
+            <div class="viewComments">
+                <div class="singleComment">
+                    <img src="images/thumbnail.jpg" alt="thumbnail" class="commentImage">
+                    <div class="wholeComment">
+                        <div class="userInfo">
+                            <div class="userName">
+                                <p><strong>Mareim Abdullah</strong></p>
+                                <p class="time">1 week ago</p>
+                            </div>
+                            <p>Who is here from france v USA 👀</p>
+                        </div>
+                        <div class="likes">
+                            <i class="fa fa-thumbs-up socialIcon"> 41</i>
+                            <i class="fa fa-thumbs-down socialIcon">  </i>
+                            <p>Reply</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="singleComment">
+                    <img src="images/thumbnail.jpg" alt="thumbnail" class="commentImage">
+                    <div class="wholeComment">
+                        <div class="userInfo">
+                            <div class="userName">
+                                <p><strong>Otavio Bravo</strong></p>
+                                <p class="time">3 days ago</p>
+                            </div>
+                            <p>At least in the US national team, most of Morgan's goals come from Rapinoe's assistances. They are easily the best front duo in the world, perhaps in history of women soccer.</p>
+                        </div>
+                        <div class="likes">
+                            <i class="fa fa-thumbs-up socialIcon"> 6</i>
+                            <i class="fa fa-thumbs-down socialIcon">  </i>
+                            <p>Reply</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="singleComment">
+                    <img src="images/thumbnail.jpg" alt="thumbnail" class="commentImage">
+                    <div class="wholeComment">
+                        <div class="userInfo">
+                            <div class="userName">
+                                <p><strong>Mareim Abdullah</strong></p>
+                                <p class="time">1 week ago</p>
+                            </div>
+                            <p>Who is here from france v USA 👀</p>
+                        </div>
+                        <div class="likes">
+                            <i class="fa fa-thumbs-up socialIcon"> 41</i>
+                            <i class="fa fa-thumbs-down socialIcon">  </i>
+                            <p>Reply</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="singleComment">
+                    <img src="images/thumbnail.jpg" alt="thumbnail" class="commentImage">
+                    <div class="wholeComment">
+                        <div class="userInfo">
+                            <div class="userName">
+                                <p><strong>Otavio Bravo</strong></p>
+                                <p class="time">3 days ago</p>
+                            </div>
+                            <p>At least in the US national team, most of Morgan's goals come from Rapinoe's assistances. They are easily the best front duo in the world, perhaps in history of women soccer.</p>
+                        </div>
+                        <div class="likes">
+                            <i class="fa fa-thumbs-up socialIcon"> 6</i>
+                            <i class="fa fa-thumbs-down socialIcon">  </i>
+                            <p>Reply</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     <!-- sidebar -------------->
         <sidebar id="sidebar">
