making some finishing touches

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>44.872 visualizações</p>
                 <div id="socialsIcons">
                     <i class="fa fa-thumbs-up socialIcon"> 512</i>
-                    <i class="fa fa-thumbs-down socialIcon">2</i>
+                    <i class="fa fa-thumbs-down socialIcon"> 2</i>
                     <img class ="socialIcon" src="images/share.png" alt="icons" id="icon">
                     <p>Share</p>
                     <img class ="socialIcon" src="images/save.png" alt="icons" id="icon">
@@ -156,6 +156,40 @@
                 </div>
             </div>
             <div class="videoThumbnail">
+                <img src="/images/videoThumbnail.png" alt="thumbnail">
+                <div class="videoText">
+                    <h3>The journey: Rose Lavelle</h3>
+                    <p>U.S Soccer</p>
+                    <p>314 k views</p>
+                </div>
+            </div>
+            <!-- spacer for seperation -------------->        
+            <div class="thumbnailSpacer"></div>  
+            <div class="videoThumbnail2">
+                <img src="/images/videoThumbnail.png" alt="thumbnail">
+                <div class="videoText">
+                    <h3>The journey: Rose Lavelle</h3>
+                    <p>U.S Soccer</p>
+                    <p>314 k views</p>
+                </div>
+            </div>  
+            <div class="videoThumbnail2">
+                <img src="/images/videoThumbnail.png" alt="thumbnail">
+                <div class="videoText">
+                    <h3>The journey: Rose Lavelle</h3>
+                    <p>U.S Soccer</p>
+                    <p>314 k views</p>
+                </div>
+            </div> 
+            <div class="videoThumbnail2">
+                <img src="/images/videoThumbnail.png" alt="thumbnail">
+                <div class="videoText">
+                    <h3>The journey: Rose Lavelle</h3>
+                    <p>U.S Soccer</p>
+                    <p>314 k views</p>
+                </div>
+            </div> 
+            <div class="videoThumbnail2">
                 <img src="/images/videoThumbnail.png" alt="thumbnail">
                 <div class="videoText">
                     <h3>The journey: Rose Lavelle</h3>
