--- a/index.html
+++ b/index.html
@@ -31,10 +31,16 @@
             <iframe id="mainVideo" src="https://www.youtube.com/embed/tw2hcKNoz40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h1 id="videoTitle">Rose Lavelle | Best Moments | USWNT</h1>
             <div id="socialsContainer">
-                <p>44.872 visualizações</p>
+                <p>44,872 views</p>
                 <div id="socialsIcons">
-                    <i class="fa fa-thumbs-up socialIcon"> 512</i>
-                    <i class="fa fa-thumbs-down socialIcon"> 2</i>
+                    <div class="socialIconsContainer">
+                        <i class="fa fa-thumbs-up socialIcon"></i>
+                        <p>512</p>
+                    </div>
+                    <div class="socialIconsContainer">
+                        <i class="fa fa-thumbs-down socialIcon"></i>
+                        <p>2</p>
+                    </div>
                     <img class ="socialIcon" src="images/share.png" alt="icons" id="icon">
                     <p>Share</p>
                     <img class ="socialIcon" src="images/save.png" alt="icons" id="icon">
@@ -54,7 +60,7 @@
                     </div>
                 </div>
                 <div>
-                    <button id="subscribeButton" type="submit">SUBSCRIBE 25 THOUSAND</button>
+                    <button id="subscribeButton" type="submit">SUBSCRIBE 25K</button>
                 </div>
             </div>
             <div id="category">
@@ -87,8 +93,14 @@
                             <p>Who is here from france v USA 👀</p>
                         </div>
                         <div class="likes">
-                            <i class="fa fa-thumbs-up socialIcon"> 41</i>
-                            <i class="fa fa-thumbs-down socialIcon">  </i>
+                            <div class="socialIconsContainer">
+                                <i class="fa fa-thumbs-up socialIcon"></i>
+                                <p>41 </p>
+                            </div>
+                            <div class="socialIconsContainer">
+                                <i class="fa fa-thumbs-down socialIcon"></i>
+                                <p></p>
+                            </div>
                             <p>Reply</p>
                         </div>
                     </div>
@@ -104,8 +116,14 @@
                             <p>At least in the US national team, most of Morgan's goals come from Rapinoe's assistances. They are easily the best front duo in the world, perhaps in history of women soccer.</p>
                         </div>
                         <div class="likes">
-                            <i class="fa fa-thumbs-up socialIcon"> 6</i>
-                            <i class="fa fa-thumbs-down socialIcon">  </i>
+                            <div class="socialIconsContainer">
+                                <i class="fa fa-thumbs-up socialIcon"></i>
+                                <p>41 </p>
+                            </div>
+                            <div class="socialIconsContainer">
+                                <i class="fa fa-thumbs-down socialIcon"></i>
+                                <p></p>
+                            </div>
                             <p>Reply</p>
                         </div>
                     </div>
@@ -121,8 +139,14 @@
                             <p>Who is here from france v USA 👀</p>
                         </div>
                         <div class="likes">
-                            <i class="fa fa-thumbs-up socialIcon"> 41</i>
-                            <i class="fa fa-thumbs-down socialIcon">  </i>
+                            <div class="socialIconsContainer">
+                                <i class="fa fa-thumbs-up socialIcon"></i>
+                                <p>6</p>
+                            </div>
+                            <div class="socialIconsContainer">
+                                <i class="fa fa-thumbs-down socialIcon"></i>
+                                <p></p>
+                            </div>
                             <p>Reply</p>
                         </div>
                     </div>
@@ -138,8 +162,14 @@
                             <p>At least in the US national team, most of Morgan's goals come from Rapinoe's assistances. They are easily the best front duo in the world, perhaps in history of women soccer.</p>
                         </div>
                         <div class="likes">
-                            <i class="fa fa-thumbs-up socialIcon"> 6</i>
-                            <i class="fa fa-thumbs-down socialIcon">  </i>
+                            <div class="socialIconsContainer">
+                                <i class="fa fa-thumbs-up socialIcon"></i>
+                                <p>6</p>
+                            </div>
+                            <div class="socialIconsContainer">
+                                <i class="fa fa-thumbs-down socialIcon"></i>
+                                <p></p>
+                            </div>
                             <p>Reply</p>
                         </div>
                     </div>
