fixing errors in HTML and CSS / update README

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-    <!-- Navigation -------------->
+    <!-- Navigation -->
     <nav id="navigation">
         <div id="guideContainer">
             <i class="fas fa-bars guideLogo" id="guide"></i>
@@ -24,11 +24,11 @@
         </form>
         <img src="images/icons.png" alt="icons" id="icons">
     </nav>
-    <!-- Content and sidebar container -------------->
+    <!-- Content and sidebar container -->
         <div id="mainContent">
-    <!-- Main Content -------------->
+    <!-- Main Content -->
         <main id="main">
-            <iframe id="mainVideo" src="https://www.youtube.com/embed/tw2hcKNoz40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="mainVideo" src="https://www.youtube.com/embed/tw2hcKNoz40" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h1 id="videoTitle">Rose Lavelle | Best Moments | USWNT</h1>
             <div id="socialsContainer">
                 <p>44,872 views</p>
@@ -41,16 +41,16 @@
                         <i class="fa fa-thumbs-down socialIcon"></i>
                         <p>2</p>
                     </div>
-                    <img class ="socialIcon" src="images/share.png" alt="icons" id="icon">
+                    <img class ="socialIcon icon" src="images/share.png" alt="icons">
                     <p>Share</p>
-                    <img class ="socialIcon" src="images/save.png" alt="icons" id="icon">
+                    <img class ="socialIcon icon" src="images/save.png" alt="icons">
                     <p>Save</p>
-                    <img class ="socialIcon" src="images/dots.svg" alt="icons" id="icon">
+                    <img class ="socialIcon icon" src="images/dots.svg" alt="icons">
                 </div>
             </div>
-    <!-- spacer for seperation -------------->        
+    <!-- spacer for seperation -->        
             <div class="spacer"></div>
-    <!-- video description -------------->
+    <!-- video description -->
             <div id="videoDescription">
                 <div id="channelDescription">
                     <img id="channelImage" src="images/channel.jpg" alt="channel">
@@ -67,7 +67,7 @@
                 <p>Category</p>
                 <a href="#">Sports</a>
             </div> 
-            <!-- spacer for seperation -------------->        
+            <!-- spacer for seperation -->        
             <div class="spacer"></div>  
             <!--Comment section!-->   
             <div id="commentsSort">
@@ -176,27 +176,27 @@
                 </div>
             </div>
         </main>
-    <!-- sidebar -------------->
-        <sidebar id="sidebar">
+    <!-- sidebar -->
+        <div id="sidebar">
             <div id="nextAndAP">
                 <p>Next</p>
                 <div id="autoplay">
                     <p>AUTOPLAY</p>
-                    <img src="/images/autoplay.png" alt="autoplay">
+                    <img src="images/autoplay.png" alt="autoplay">
                 </div>
             </div>
             <div class="videoThumbnail">
-                <img src="/images/videoThumbnail.png" alt="thumbnail">
+                <img src="images/videoThumbnail.png" alt="thumbnail">
                 <div class="videoText">
                     <h3>The journey: Rose Lavelle</h3>
                     <p>U.S Soccer</p>
                     <p>314 k views</p>
                 </div>
             </div>
-            <!-- spacer for seperation -------------->        
+            <!-- spacer for seperation -->        
             <div class="thumbnailSpacer"></div>  
             <div class="videoThumbnail2">
-                <img src="/images/videoThumbnail.png" alt="thumbnail">
+                <img src="images/videoThumbnail.png" alt="thumbnail">
                 <div class="videoText">
                     <h3>The journey: Rose Lavelle</h3>
                     <p>U.S Soccer</p>
@@ -204,7 +204,7 @@
                 </div>
             </div>  
             <div class="videoThumbnail2">
-                <img src="/images/videoThumbnail.png" alt="thumbnail">
+                <img src="images/videoThumbnail.png" alt="thumbnail">
                 <div class="videoText">
                     <h3>The journey: Rose Lavelle</h3>
                     <p>U.S Soccer</p>
@@ -212,7 +212,7 @@
                 </div>
             </div> 
             <div class="videoThumbnail2">
-                <img src="/images/videoThumbnail.png" alt="thumbnail">
+                <img src="images/videoThumbnail.png" alt="thumbnail">
                 <div class="videoText">
                     <h3>The journey: Rose Lavelle</h3>
                     <p>U.S Soccer</p>
@@ -220,14 +220,14 @@
                 </div>
             </div> 
             <div class="videoThumbnail2">
-                <img src="/images/videoThumbnail.png" alt="thumbnail">
+                <img src="images/videoThumbnail.png" alt="thumbnail">
                 <div class="videoText">
                     <h3>The journey: Rose Lavelle</h3>
                     <p>U.S Soccer</p>
                     <p>314 k views</p>
                 </div>
             </div>
-        </sidebar>
+        </div>
     </div>
 </body>
 </html>
