--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <main id="main">
             <iframe id="mainVideo" src="https://www.youtube.com/embed/tw2hcKNoz40" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h1 id="videoTitle">Rose Lavelle | Best Moments | USWNT</h1>
-            <div id="socialsContainer">
+            <div class="socialsContainer">
                 <p>44,872 views</p>
                 <div id="socialsIcons">
                     <div class="socialIconsContainer">
